css/vegan.css
/* vegan.css */

html,
body {
  overflow-x: hidden;
  font-family: 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, sans-serif; }

p {
  line-height: 1.75; }

a {
  color: #fed136; }
  a.active, a:active, a:focus, a:hover {
    color: #fec503; }

.text-primary {
  color: #fed136 !important; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }

section {
  padding: 100px 0; }
  section h2.section-heading {
    font-size: 40px;
    margin-top: 0;
    margin-bottom: 15px; }
  section h3.section-subheading {
    font-size: 16px;
    font-weight: 400;
    font-style: italic;
    margin-bottom: 75px;
    text-transform: none;
    font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }

@media (min-width: 768px) {
  section {
    padding: 150px 0; } }

.btn {
  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 700; }

.btn-primary {
  color: white;
  border-color: #fed136;
  background-color: #fed136; }
  .btn-primary.focus, .btn-primary:focus {
    color: white;
    border-color: #b48b01;
    background-color: #fec503; }
  .btn-primary:hover {
    color: white;
    border-color: #f6bf01;
    background-color: #fec503; }
  .btn-primary.active, .btn-primary:active,
  .open > .btn-primary.dropdown-toggle {
    color: white;
    border-color: #f6bf01;
    background-color: #fec503; }
    .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover,
    .open > .btn-primary.dropdown-toggle.focus,
    .open > .btn-primary.dropdown-toggle:focus,
    .open > .btn-primary.dropdown-toggle:hover {
      color: white;
      border-color: #b48b01;
      background-color: #dcab01; }
  .btn-primary.active, .btn-primary:active,
  .open > .btn-primary.dropdown-toggle {
    background-image: none; }
  .btn-primary.disabled.focus, .btn-primary.disabled:focus, .btn-primary.disabled:hover, .btn-primary[disabled].focus, .btn-primary[disabled]:focus, .btn-primary[disabled]:hover,
  fieldset[disabled] .btn-primary.focus,
  fieldset[disabled] .btn-primary:focus,
  fieldset[disabled] .btn-primary:hover {
    border-color: #fed136;
    background-color: #fed136; }
  .btn-primary .badge {
    color: #fed136;
    background-color: white; }

.btn-xl {
  font-size: 18px;
  padding: 20px 40px; }

::-moz-selection {
  background: #fed136;
  text-shadow: none; }

::selection {
  background: #fed136;
  text-shadow: none; }

img::selection {
  background: transparent; }

img::-moz-selection {
  background: transparent; }

body {
  -webkit-tap-highlight-color: #fed136; }

#mainNav {
  background-color: #212529; }
  #mainNav .navbar-toggler {
    font-size: 12px;
    right: 0;
    padding: 13px;
    text-transform: uppercase;
    color: white;
    border: 0;
    background-color: #fed136;
    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
  #mainNav .navbar-brand {
    color: #fed136;
    font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive; }
    #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
      color: #fec503; }
  #mainNav .navbar-nav .nav-item .nav-link {
    font-size: 90%;
    font-weight: 400;
    padding: 0.75em 0;
    letter-spacing: 1px;
    color: white;
    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
    #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
      color: #fed136; }

@media (min-width: 992px) {
  #mainNav {
    padding-top: 25px;
    padding-bottom: 25px;
    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
    -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
    transition: padding-top 0.3s, padding-bottom 0.3s;
    border: none;
    background-color: transparent; }
    #mainNav .navbar-brand {
      font-size: 1.75em;
      -webkit-transition: all 0.3s;
      -moz-transition: all 0.3s;
      transition: all 0.3s; }
    #mainNav .navbar-nav .nav-item .nav-link {
      padding: 1.1em 1em !important; }
    #mainNav.navbar-shrink {
      padding-top: 0;
      padding-bottom: 0;
      background-color: #212529; }
      #mainNav.navbar-shrink .navbar-brand {
        font-size: 1.25em;
        padding: 12px 0; } }

header.masthead {
    background-image: url("../images/GIF1.gif");
    background-repeat: no-repeat;
    background-attachment: scroll;
    background-position: center center;
    background-size: cover; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    text-align: center;
    color: white;}

  header.masthead .intro-text {
    padding-top: 250px;
    padding-bottom: 100px; }
    header.masthead .intro-text .intro-lead-in {
      font-size: 22px;
      font-style: italic;
      line-height: 22px;
      margin-bottom: 25px;
      font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
    header.masthead .intro-text .intro-heading {
      font-size: 50px;
      font-weight: 700;
      line-height: 50px;
      margin-bottom: 25px;
      font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }

@media (min-width: 768px) {
  header.masthead .intro-text {
    padding-top: 300px;
    padding-bottom: 200px; }
    header.masthead .intro-text .intro-lead-in {
      font-size: 40px;
      font-style: italic;
      line-height: 40px;
      margin-bottom: 25px;
      font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
    header.masthead .intro-text .intro-heading {
      font-size: 75px;
      font-weight: 700;
      line-height: 75px;
      margin-bottom: 50px;
      font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; } }



#Recipe .Recipe-item {
  right: 0;
  margin: 0 0 15px; }
  #Recipe .Recipe-item .Recipe-link {
    position: relative;
    display: block;
    max-width: 400px;
    margin: 0 auto;
    cursor: pointer; }
    #Recipe .Recipe-item .Recipe-link .Recipe-hover {
      position: absolute;
      width: 100%;
      height: 100%;
      -webkit-transition: all ease 0.5s;
      -moz-transition: all ease 0.5s;
      transition: all ease 0.5s;
      opacity: 0;
      background: rgba(254, 209, 54, 0.9); }
      #Recipe .Recipe-item .Recipe-link .Recipe-hover:hover {
        opacity: 1; }
      #Recipe .Recipe-item .Recipe-link .Recipe-hover .Recipe-hover-content {
        font-size: 20px;
        position: absolute;
        top: 50%;
        width: 100%;
        height: 20px;
        margin-top: -12px;
        text-align: center;
        color: white; }
        #Recipe .Recipe-item .Recipe-link .Recipe-hover .Recipe-hover-content i {
          margin-top: -12px; }
        #Recipe .Recipe-item .Recipe-link .Recipe-hover .Recipe-hover-content h3,
        #Recipe .Recipe-item .Recipe-link .Recipe-hover .Recipe-hover-content h4 {
          margin: 0; }
  #Recipe .Recipe-item .Recipe-caption {
    max-width: 400px;
    margin: 0 auto;
    padding: 25px;
    text-align: center;
    background-color: #fff; }
    #Recipe .Recipe-item .Recipe-caption h4 {
      margin: 0;
      text-transform: none; }
    #Recipe .Recipe-item .Recipe-caption p {
      font-size: 16px;
      font-style: italic;
      margin: 0;
      font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }

#Recipe * {
  z-index: 2; }

@media (min-width: 767px) {
  #Recipe .Recipe-item {
    margin: 0 0 30px; } }

.Recipe-modal .modal-dialog {
  max-width: none;
  height: 100%;
  margin: 0; }

.Recipe-modal .modal-content {
  min-height: 100%;
  padding: 100px 0;
  text-align: center;
  border: none;
  border-radius: 0;
  background-clip: border-box;
  -webkit-box-shadow: none;
  box-shadow: none; }
  .Recipe-modal .modal-content h2 {
    font-size: 3em;
    margin-bottom: 15px; }
  .Recipe-modal .modal-content p {
    margin-bottom: 30px; }
  .Recipe-modal .modal-content p.item-intro {
    font-size: 16px;
    font-style: italic;
    margin: 20px 0 30px;
    font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
  .Recipe-modal .modal-content ul.list-inline {
    margin-top: 0;
    margin-bottom: 30px; }
  .Recipe-modal .modal-content img {
    margin-bottom: 30px; }
  .Recipe-modal .modal-content button {
    cursor: pointer; }

.Recipe-modal .close-modal {
  position: absolute;
  top: 25px;
  right: 25px;
  width: 75px;
  height: 75px;
  cursor: pointer;
  background-color: transparent; }
  .Recipe-modal .close-modal:hover {
    opacity: 0.3; }
  .Recipe-modal .close-modal .lr {
    /* Safari and Chrome */
    z-index: 1051;
    width: 1px;
    height: 75px;
    margin-left: 35px;
    /* IE 9 */
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
    background-color: #212529; }
    .Recipe-modal .close-modal .lr .rl {
      /* Safari and Chrome */
      z-index: 1052;
      width: 1px;
      height: 75px;
      /* IE 9 */
      -webkit-transform: rotate(90deg);
      -ms-transform: rotate(90deg);
      transform: rotate(90deg);
      background-color: #212529; }

.Recipe-modal .modal-backdrop {
  display: none;
  opacity: 0; }

.Kitchen-heading {
  margin: 15px 0;
  text-transform: none; }

container.team-pict{
    background-image:url("../images/team3.jpg");
    background-position : absolute;
    width: 480px;
    top: 0;
    bottom: 0;
    left: calc((100% - 280px) * 0.5); 
}

section#Contact {
  background-size: cover;
  background-image: url("../images/image2.jpg");
  background-repeat: no-repeat;
  background-position: center; }
  section#Contact .section-heading {
    color: #fff; }
  section#Contact .form-group {
    margin-bottom: 25px; }
    section#Contact .form-group input,
    section#Contact .form-group textarea {
      padding: 20px; }
    section#Contact .form-group input.form-control {
      height: auto; }
    section#Contact .form-group textarea.form-control {
      height: 248px; }
  section#Contact .form-control:focus {
    border-color: #fed136;
    box-shadow: none; }
  section#Contact ::-webkit-input-placeholder {
    font-weight: 700;
    color: #ced4da;
    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
  section#Contact :-moz-placeholder {
    font-weight: 700;
    color: #ced4da;
    /* Firefox 18- */
    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
  section#Contact ::-moz-placeholder {
    font-weight: 700;
    color: #ced4da;
    /* Firefox 19+ */
    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
  section#Contact :-ms-input-placeholder {
    font-weight: 700;
    color: #ced4da;
    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }

/* footer */
 .btn-twitter {
     background-color: #00aced;
     border-color: #00aced; 
 }
 .btn-facebook { 
     background-color: #4868ac; 
     border-color: #4868ac;
 }
 .btn-instagram {
     background-color: #fb3958;
     border-color: #fb3958;

